fix: disable importing custom multi valued properties - EXO-65669 - Meeds-io/meeds#1070